[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "testorbit"
version = "0.1.0"
description = "A lightweight CLI to simplify local test automation workflows."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Mike" }
]
dependencies = [
  "PyYAML>=6.0",
  "rich>=13.7",
  "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
testorbit = "testorbit.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
